# omniscidb

./: CMakeLists.txt
Catalog/: CMakeLists.txt  Catalog.cpp
Embedded/: CMakeLists.txt  DBEngine.cpp  DBEngine.pxd  data  dbe.pyx  setup.py
QueryEngine/: ArrowResultSet.h
QueryRunner/: CMakeLists.txt
Shared/: mapdpath.h
Tests/: ForeignServerDdlTest.cpp  ShowCommandsDdlTest.cpp
ThriftHandler/: DBHandler.cpp  MapDHandler.cpp
Wrapper/: DBEngine.cpp  DBEngine.h  DBEngine.pxd  dbe.pyx  setup.py  test.py
